# wrapDeformer

./: .gitignore  CMakeLists.txt  README.md
modules/: FindMaya.cmake
src/: CMakeLists.txt  alias.hpp  barycentricData.cpp  barycentricData.hpp  deformTransfer.cpp  deformTransfer.h  logUtils.hpp  types.hpp  wrapDeformer.cpp  wrapDeformer.hpp
